2006-09-19 Erwann Chenede - <erwann.chenede@sun.com>

  * icons/* : initial implementation of the icon theme.
  * configure.in : added dependency on icon-name-mapping
                   bumped release.

2006-07-26 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/* : implemented radio and check widget for menu item
    and fixed java radio/check menu button cropping issue.

2006-07-20 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/nimbus_style.c : fix for gimp trashed rulers and progressbar

2006-07-20 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/nimbus_style.c: fix for gaim crash 6446921

2006-06-02 Erwann Chenede - <erwann.chenede@sun.com>

  * a lot of fixes :)
    - Added clipping for all the drawing routines
    - implemented handlebar 
    - fixed scrollbar for firefox/thunderbird and SO
    - fixed pane problems
    - fixed shadow problems
    - fixed Range problems

2006-05-26 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/*.[hc] : fixed exported ABI and 6430524
  * metacity/metacity-theme-1.xml : fixed 6430374

2006-05-22 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/nimbus_style.c :
  * gtk-engine/gtk-2.0/gtkrc : implemented tooltips

  * metacity/metacity-theme-1.xml : fixed maximized toolbar 
    problem when fonts are very small

2006-05-19 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/nimbus_style.c : fix for 6426784

2006-05-12 Erwann Chenede - <erwann.chenede@sun.com>

  * added stock icons

2006-04-26 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/nimbus_rc_style.c
    gtk-engine/nimbus_rc_style.h
    gtk-engine/nimbus_style.c : better memory management 
    only allocate replicated images if needed.
    fixed vertical progress bar glow offset.

2006-04-21 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/nimbus_style.c  : fixed GnomeEntry and not GnomeFileEntry
				 fixed Gimp Combox
				 fixed arrow centering problem is combobox
