@@ -9,7 +9,7 @@ void main (int argc, char **argv)
   gtk_init (&argc, &argv);
 
   gtk_settings_set_string_property (gtk_settings_get_default (),
-				    "gtk-theme-name", "nimbus", "gdm");
+				    "gtk-theme-name", "Clearlooks", "blah");
 
 
   window = gtk_window_new (GTK_WINDOW_TOPLEVEL);
